slightly increased padding in details of horizontal cards to avoid collapse with a possible options button

--- a/components/horizontal-card.module.css
+++ b/components/horizontal-card.module.css
@@ -43,7 +43,7 @@
 .details {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.125rem;
 
     width: 100%;
 }
